--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=../../../../../../../mysql/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=D:\\Downloads\\Compressed\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
