--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,10 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+do.jlink=false
+file.reference.mysql-connector-j-8.0.31.jar=D:\\Github\\\u2014 Java\\Libraries\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=D:\\Github\\\u2014 Java\\Libraries\\mysql-connector-j-8.0.31.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\nappi\\AppData\\Roaming\\NetBeans\\16\\build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\atond\\AppData\\Roaming\\NetBeans\\13\\build.properties
