--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,15 +33,21 @@ dist.jar=${dist.dir}/softlabproject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.beansbinding-1.2.1.jar=D:\\Github\\\u2014 Java\\Libraries\\beansbinding-1.2.1.jar
+file.reference.miglayout-4.0.jar=D:\\Github\\\u2014 Java\\Libraries\\miglayout-4.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=../../../../../../../mysql/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=D:\\Downloads\\Compressed\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-2=D:\\Github\\\u2014 Java\\Libraries\\mysql-connector-j-8.0.31.jar
+file.reference.TimingFramework-0.55.jar=D:\\Github\\\u2014 Java\\Libraries\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar-1}
+    ${file.reference.beansbinding-1.2.1.jar}:\
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,6 +68,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -70,6 +77,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=softlabproject
 main.class=App.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
