--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,13 @@ endorsed.classpath=
 excludes=
 file.reference.beansbinding-1.2.1.jar=D:\\Github\\\u2014 Java\\Libraries\\beansbinding-1.2.1.jar
 file.reference.miglayout-4.0.jar=D:\\Github\\\u2014 Java\\Libraries\\miglayout-4.0.jar
+file.reference.miglayout-4.0.jar-1=C:\\Users\\Cy Andrade\\Downloads\\miglayout-4.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=../../../../../../../mysql/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=D:\\Downloads\\Compressed\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-2=D:\\Github\\\u2014 Java\\Libraries\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-3=C:\\Users\\Cy Andrade\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.TimingFramework-0.55.jar=D:\\Github\\\u2014 Java\\Libraries\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Cy Andrade\\Downloads\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +50,10 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
     ${file.reference.beansbinding-1.2.1.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
-    ${file.reference.TimingFramework-0.55.jar}
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-3}:\
+    ${file.reference.miglayout-4.0.jar-1}:\
+    ${file.reference.TimingFramework-0.55.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
