fixed jtable scroll

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.mysql-connector-j-8.0.31.jar-1=D:\\Github\\\u2014 Java\\Libraries
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\nappi\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\JeNNeL\\AppData\\Roaming\\NetBeans\\17\\build.properties
