add small changes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,22 +36,27 @@ excludes=
 file.reference.beansbinding-1.2.1.jar=D:\\Github\\\u2014 Java\\Libraries\\beansbinding-1.2.1.jar
 file.reference.beansbinding-1.2.1.jar-1=D:\\Downloads\\beansbinding-1.2.1.jar
 file.reference.beansbinding-1.2.1.jar-2=C:\\Users\\CailynRae\\Downloads\\beansbinding-1.2.1.jar
+file.reference.beansbinding-1.2.1.jar-3=src/libraries/beansbinding-1.2.1.jar
 file.reference.itext-1.4.8.jar=D:\\Downloads\\Compressed\\itext-1.4.8.jar\\itext-1.4.8.jar
 file.reference.itext-1.4.8.jar-1=C:\\Users\\CailynRae\\Downloads\\itext-1.4.8.jar
+file.reference.itext-1.4.8.jar-2=src/libraries/itext-1.4.8.jar
 file.reference.miglayout-4.0.jar=D:\\Github\\\u2014 Java\\Libraries\\miglayout-4.0.jar
 file.reference.miglayout-4.0.jar-1=C:\\Users\\Cy Andrade\\Downloads\\miglayout-4.0.jar
 file.reference.miglayout-4.0.jar-2=D:\\Downloads\\miglayout-4.0.jar
 file.reference.miglayout-4.0.jar-3=C:\\Users\\CailynRae\\Downloads\\miglayout-4.0.jar
+file.reference.miglayout-4.0.jar-4=src/libraries/miglayout-4.0.jar
 file.reference.mysql-connector-j-8.0.31.jar=../../../../../../../mysql/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=D:\\Downloads\\Compressed\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-2=D:\\Github\\\u2014 Java\\Libraries\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-3=C:\\Users\\Cy Andrade\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-4=D:\\Downloads\\Compressed\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-5=C:\\Users\\CailynRae\\Desktop\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-6=src/libraries/mysql-connector-j-8.0.31.jar
 file.reference.TimingFramework-0.55.jar=D:\\Github\\\u2014 Java\\Libraries\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Cy Andrade\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-2=D:\\Downloads\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-3=C:\\Users\\CailynRae\\Downloads\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-4=src/libraries/TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -73,7 +78,12 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar-3}:\
     ${file.reference.beansbinding-1.2.1.jar-2}:\
     ${file.reference.itext-1.4.8.jar-1}:\
-    ${file.reference.miglayout-4.0.jar-3}
+    ${file.reference.miglayout-4.0.jar-3}:\
+    ${file.reference.TimingFramework-0.55.jar-4}:\
+    ${file.reference.beansbinding-1.2.1.jar-3}:\
+    ${file.reference.itext-1.4.8.jar-2}:\
+    ${file.reference.miglayout-4.0.jar-4}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-6}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
